// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import-assertions-dynamic.js - {"bracketSpacing":false} [espree] format 1`] = `
"Unexpected token , (1:20)
> 1 | import(\\"./foo.json\\", { assert: { type: \\"json\\" } });
    |                    ^
  2 | "
`;

exports[`import-assertions-dynamic.js - {"bracketSpacing":false} [meriyah] format 1`] = `
"[1:20]: Expected ')' (1:20)
> 1 | import(\\"./foo.json\\", { assert: { type: \\"json\\" } });
    |                    ^
  2 | "
`;

exports[`import-assertions-dynamic.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import("./foo.json", { assert: { type: "json" } });

=====================================output=====================================
import("./foo.json", {assert: {type: "json"}});

================================================================================
`;

exports[`import-assertions-for-export.js - {"bracketSpacing":false} [espree] format 1`] = `
"Unexpected token assert (1:33)
> 1 | export { foo2 } from \\"foo.json\\" assert { type: \\"json\\" };
    |                                 ^
  2 | "
`;

exports[`import-assertions-for-export.js - {"bracketSpacing":false} [meriyah] format 1`] = `
"[1:38]: Unexpected token: 'identifier' (1:38)
> 1 | export { foo2 } from \\"foo.json\\" assert { type: \\"json\\" };
    |                                      ^
  2 | "
`;

exports[`import-assertions-for-export.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export { foo2 } from "foo.json" assert { type: "json" };

=====================================output=====================================
export {foo2} from "foo.json" assert {type: "json"};

================================================================================
`;

exports[`import-assertions-static.js - {"bracketSpacing":false} [espree] format 1`] = `
"Unexpected token assert (1:31)
> 1 | import json from \\"./foo.json\\" assert { type: \\"json\\" };
    |                               ^
  2 | "
`;

exports[`import-assertions-static.js - {"bracketSpacing":false} [meriyah] format 1`] = `
"[1:36]: Unexpected token: 'identifier' (1:36)
> 1 | import json from \\"./foo.json\\" assert { type: \\"json\\" };
    |                                    ^
  2 | "
`;

exports[`import-assertions-static.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import json from "./foo.json" assert { type: "json" };

=====================================output=====================================
import json from "./foo.json" assert {type: "json"};

================================================================================
`;
